main.css
/* ... */
/* THIRD ROW MAIN PAGE */]
#thirdRowMain {
    display: flex;
    justify-content: center;
    align-items: center;
}

#headshotDiv {
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
    align-items: center;
}

#headshot {
    width: 55%;
}

#welcomeQuoteDiv {
    position: relative;
	background: #0c3b5d;
	border-radius: .4em;
    text-align: center;
    display: block;
    justify-content: center;
    align-items: center;
    padding: 3% 3%;
    color: white;
    /* height: 35vh; */
}
    
#welcomeQuoteDiv:after {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    width: 0;
    height: 0;
    border: 82px solid transparent;
    border-right-color: #0c3b5d;
    border-left: 0;
    border-top: 0;
    margin-top: -41px;
    margin-left: -82px;
}

#welcomeQuote {
    font-size: calc(10px + 1.1vw);
    font-family: "Poppins", sans-serif;
}

#quoteBy {
    text-align: right;
    font-family: "Averia Libre", cursive;
    font-size: calc(12px + 1.1vw);
}


@media screen and (max-width: 1000px) {
    #welcomeQuoteDiv:after {
        content: '';
        position: absolute;
        left: 0;
        top: 50%;
        width: 0;
        height: 0;
        border: 60px solid transparent;
        border-right-color: #0c3b5d;
        border-left: 0;
        border-top: 0;
        margin-top: -28px;
        margin-left: -60px;
    }
}

@media screen and (max-width: 769px) {
    #headshot {
        /* width: 30% */
    }

    #welcomeQuoteDiv {
        margin-top: 35px;
        padding: 20px 16px;
    }

    #welcomeQuoteDiv:after {
        content: '';
        position: absolute;
        top: 0;
        left: 50%;
        width: 0;
        height: 0;
        border: 30px solid transparent;
        border-bottom-color: #0c3b5d;
        border-top: 0;
        margin-left: -30px;
        margin-top: -30px;

    }
}

@media screen and (min-width: 768px) and (max-width: 1031px) {
    #headshotDiv {
        justify-content: left;
    }

    #headshot {
        width: 75%;
    }
}



/* BUSINESS CAPITAL PAGE */
#topDivBiz {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372783/LEARCO/Diverse6.jpg");
}

#bizPageHero {
    margin-top: 15vh;
}

.boxTops {
    font-family: "Averia Libre", cursive;
    font-size: calc(10px + 0.7vw);
}

.boxText {
    font-family: "Poppins", sans-serif;
    font-size: calc(10px + 0.5vw);
}

.bizCapBoxes {
    margin: 5px 10px auto 10px;
    min-height: 40vh;
    padding-top: 15px;
    color: white;
    padding-top: 25px;
}

.bizCapBoxAlt {
    margin-top: 50px;
    padding-top: 55px;
    background-color: rgb(12, 59, 93);
    /* padding-bottom: 15px; */
}

@media screen and (max-width: 767.8px) {
    .bizCapBoxes {
        margin-top: 15px;
    }

    .boxTops {
        font-size: calc(12px + 1.2vw);
    }

    .boxText {
        font-size: calc(10px + 1.5vw);
    }

}


/* EMP PAY ANYDAY PAGE */
#topDivEmpPay {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372765/LEARCO/Diverse7.jpg");
}

#empPayPageHero {
    margin-top: 8vh;
}

@media screen and (max-width: 800px) {
    #empPayPageHero {
        margin-top: 14vh;
    }
}

#empPayDiv {
    background-color: rgb(12, 59, 93, 0.9);
    color: white;
    display: block;
    text-align: center;
    /* margin-top: -10vh; */
    z-index: 1;
    border-radius: 5px;
    box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
    padding-bottom: 20px;
}

#handOutIcon {
    font-size: calc(12px + 2.5vw);
    margin: 15px auto;
    /* border: 1px solid black; */
    display: inline-block;
}

#empPayAboutTitle {
    font-family: "Averia Libre", cursive;
    font-size: calc(12px + 1.9vw);
}

#empPayAbout {
    font-family: "Poppins", sans-serif;
    font-size: calc(12px + 0.75vw);
}

/* R&D TAX PAGE */
#topDivRdTax {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372761/LEARCO/Diverse1.jpg");
}

#rdTaxPageHero {
    margin-top: 15vh;
}

.rdTaxBoxes {
    margin: 15px 5px;
    padding-bottom: 15px;
    font-family: "Poppins", sans-serif;
    font-size: calc(11px + 0.8vw);
}

#rdTaxBox1 {
    background-color: rgb(33, 94, 172);
    color: white;
}

#rdTaxBox2 {
    background-color: rgb(25, 178, 80);
    color: rgb(12, 59, 93);
    font-weight: 600;
}

#rdTaxBox3 {
    background-color: rgb(33, 94, 172);
    color: white;
}

.rdTaxIcons {
    margin: 5vh auto 2vh auto;
    font-size: calc(12px + 2vw);
}

#rdTaxDescriptor {
    display: block;
    align-items: center;
    /* border: 1px solid black; */
    padding: 25px;
    border-radius: 25px;
    margin: 15px auto;
    background-color: rgb(12, 59, 93);
    color: white;
    font-size: calc(12px + 1.2vw);
}

#rdTaxDescriptorTitle {
    text-align: center;
    font-family: "Averia Libre", cursive;
    font-size: calc(12px + 1.8vw);
}

#rdTaxDescriptorList {
    font-family: "Poppins", sans-serif;
    font-size: calc(12px + 0.8vw);
}

#rdTaxDescriptorList li {
    margin: 15px auto;
}


/* ASSET BACKED PAGE */
#topDivAsset {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372737/LEARCO/Diverse3.jpg");
}

#assetPageHero {
    margin-top: 12vh;
}

@media screen and (min-width: 1250px) {
    #assetPageHero {
        margin-top: 7.5vh;
    }
}

#assetDescriptor {
    display: flex;
    justify-content: center;
    padding: 10px 0;
}

.assetBoxes {
    text-align: center;
    background-color: rgb(33, 94, 172);
    /* border: 1px solid rgb(25, 178, 80); */
    /* Border Radius, and Font Family handled individually below. Font-Size handled inline HTML */
    padding: 10px auto;
    color: white;
}

#assBox1 {
    border-radius: 5px 0px 0px 5px; 
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
}

#assBox2 {
    border-radius: 0px; 
    font-family: 'Averia Libre', cursive;
    background-color: rgb(12, 59, 93);
    color: white);
}
/* ... */

